<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/rounded_rectangle"
        android:orientation="vertical"
        android:padding="@dimen/_20sdp">

        <!-- Name -->

        <TextView
            style="@style/BoldTextLabel"
            android:layout_marginTop="10dp"
            android:text="@string/customer_name" />

        <EditText
            android:id="@+id/dialog_create_merchant_name_textfield"
            style="@style/NormalTextField"
            android:layout_height="37dp"
            android:layout_marginTop="5dp"
            android:hint="@string/hint_customer_name" />

        <!-- Mobile Number -->

        <TextView
            style="@style/BoldTextLabel"
            android:layout_marginTop="15dp"
            android:text="@string/mobile_number" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <com.hbb20.CountryCodePicker
                android:id="@+id/dialog_create_merchant_country_spinner"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:gravity="center"
                android:layout_marginEnd="5dp"
                android:background="@drawable/rounded_rectangle_grey"
                app:ccp_contentColor="@color/black"
                app:ccp_textSize="12sp" />

            <EditText
                android:id="@+id/dialog_create_merchant_phone_textfield"
                style="@style/NormalTextField"
                android:layout_height="37dp"
                android:hint="767123456"
                android:inputType="phone" />
        </LinearLayout>

        <!-- Customer Type -->

        <TextView
            style="@style/BoldTextLabel"
            android:layout_marginTop="15dp"
            android:text="@string/customer_type" />

        <com.skydoves.powerspinner.PowerSpinnerView
            android:id="@+id/dialog_create_merchant_type"
            style="@style/CustomSpinner"
            android:layout_marginTop="5dp"
            android:hint="@string/hint_customer_type" />

        <!-- Shop Name -->

        <TextView
            style="@style/BoldTextLabel"
            android:layout_marginTop="15dp"
            android:text="@string/shop_name" />

        <EditText
            android:id="@+id/dialog_create_merchant_shopname_textfield"
            style="@style/NormalTextField"
            android:layout_height="37dp"
            android:layout_marginTop="5dp"
            android:hint="@string/hint_shop_name" />

        <!-- Location -->

        <TextView
            style="@style/BoldTextLabel"
            android:layout_marginTop="15dp"
            android:text="@string/location" />

        <EditText
            android:id="@+id/dialog_create_merchant_location_textfield"
            style="@style/NormalTextField"
            android:layout_height="37dp"
            android:layout_marginTop="5dp"
            android:hint="@string/hint_location" />

        <!-- TIN -->

        <TextView
            style="@style/BoldTextLabel"
            android:layout_marginTop="15dp"
            android:text="@string/customer_tin_number" />

        <EditText
            android:id="@+id/dialog_create_merchant_tin_textfield"
            style="@style/NormalTextField"
            android:layout_height="37dp"
            android:layout_marginTop="5dp"
            android:inputType="numberSigned"
            android:hint="@string/hint_customer_tin_number" />

        <!-- VRN -->

        <TextView
            style="@style/BoldTextLabel"
            android:layout_marginTop="15dp"
            android:text="@string/customer_vrn_number" />

        <EditText
            android:id="@+id/dialog_create_merchant_vrn_textfield"
            style="@style/NormalTextField"
            android:layout_height="37dp"
            android:layout_marginTop="5dp"
            android:inputType="numberSigned"
            android:hint="@string/hint_customer_vrn_number" />

        <TextView
            android:id="@+id/dialog_create_merchant_add"
            style="@style/NormalActionButton"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:text="@string/add_customer" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/dialog_create_merchant_loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>