<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/reports_print_scrollview"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_gravity="center"
    android:background="@color/white"
    android:fillViewport="true"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <!-- Sale Summary -->

        <TextView
            style="@style/BoldTextSmallLabel"
            android:text="@string/sale_summary" />

        <View style="@style/Separator"
            android:layout_height="0.7dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"/>

        <TextView
            style="@style/TinyTextLabel"
            android:text="@string/total_sales_value"
            android:textColor="@color/text_grey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="bottom"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/reports_print_total_sales_value_currency"
                style="@style/BoldTinyTextLabel"
                android:text="TZS" />

            <TextView
                android:id="@+id/reports_print_total_sales_value"
                style="@style/BoldTinyTextLabel"
                android:layout_marginStart="5dp"
                android:text="329,0009,374"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                style="@style/ReportsPartLayout"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:padding="0dp">

                <TextView
                    style="@style/TinyTextLabel"
                    android:text="@string/total_sales_count"
                    android:textColor="@color/text_grey" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="bottom"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/reports_print_total_sales_count"
                        style="@style/BoldTinyTextLabel"
                        android:text="67"
                        android:textSize="10sp" />

                    <TextView
                        style="@style/BoldTinyTextLabel"
                        android:layout_marginStart="2dp"
                        android:text="@string/orders" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                style="@style/ReportsPartLayout"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:padding="0dp">

                <TextView
                    style="@style/TinyTextLabel"
                    android:text="@string/total_credit_given"
                    android:textColor="@color/text_grey" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="bottom"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/reports_print_total_credit_given_currency"
                        style="@style/BoldTinyTextLabel"
                        android:text="TZS" />

                    <TextView
                        android:id="@+id/reports_print_total_credit_given"
                        style="@style/BoldTinyTextLabel"
                        android:layout_marginStart="5dp"
                        android:text="100,000"
                        android:textSize="10sp" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <View style="@style/Separator"
            android:layout_height="0.7dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"/>

        <!-- Top Customers -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/BoldTinyTextLabel"
                android:text="@string/top_customers" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/TinyTextLabel"
                    android:layout_centerVertical="true"
                    android:text="@string/name" />

                <TextView
                    style="@style/TinyTextLabel"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:text="@string/amount" />
            </RelativeLayout>

            <View
                style="@style/Separator"
                android:layout_height="0.5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/reports_print_top_customers_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                android:scrollbars="none" />
        </LinearLayout>

        <!-- Top Products -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <TextView
                style="@style/BoldTinyTextLabel"
                android:text="@string/top_products" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/TinyTextLabel"
                    android:layout_centerVertical="true"
                    android:text="@string/name" />

                <TextView
                    style="@style/TinyTextLabel"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:text="@string/revenue" />
            </RelativeLayout>

            <View
                style="@style/Separator"
                android:layout_height="0.5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/reports_print_top_products_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                android:scrollbars="none" />
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>